--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-    />
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
+    rel="stylesheet"
+  />
 </head>
 <body>
     <div class="container d-flex justify-content-center align-items-center mt-5"  style="max-width: 800vh;"  >
@@ -21,19 +23,19 @@
             <div class="col-md-6 bg-dark text-light p-4">
                 <form>
                     <div class="mb-3">
-                        <label for="name" class="form-label">Name</label>
+                        <label for="name" class="form-label"> <i class="bi bi-person"></i> Name</label>
                         <input type="text" class="form-control" id="name" placeholder="Enter your name">
                     </div>
                     <div class="mb-3">
-                        <label for="email" class="form-label">Email</label>
+                        <label for="email" class="form-label"> <i class="fa fa-envelope"></i> Email</label>
                         <input type="email" class="form-control" id="email" placeholder="Enter your email">
                     </div>
                     <div class="mb-3">
-                        <label for="password" class="form-label">Password</label>
+                        <label for="password" class="form-label"> <i class="fa fa-lock"></i> Password</label>
                         <input type="password" class="form-control" id="password" placeholder="Enter your password">
                     </div>
                     <div class="mb-3">
-                        <label for="confirm-password" class="form-label">Confirm Password</label>
+                        <label for="confirm-password" class="form-label"> <i class="fa fa-lock"></i> Confirm Password</label>
                         <input type="password" class="form-control" id="confirm-password" placeholder="Confirm your password">
                     </div>
                     <div class="mb-3 form-check">
